*tremc-0_p20170122 (24 Apr 2017)

  24 Apr 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +tremc-0_p20170122.ebuild, -tremc-0_p20170424.ebuild:
  net-p2p/tremc: rename snapshot to actual commit date

*tremc-0_p20170424 (24 Apr 2017)

  24 Apr 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +tremc-0_p20170424.ebuild:
  net-p2p/tremc: add snapshot

*tremc-9999 (20 Apr 2017)

  20 Apr 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +metadata.xml, +tremc-9999.ebuild:
  net-p2p/tremc: new ebuild  tremc is a python3 fork of transmission-remote-cli