@@ -16,9 +16,10 @@ SRC_URI="https://github.com/louipc/tremc/archive/$COMMIT.tar.gz -> $P.tar.gz"
 LICENSE="GPL-3"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="geoip"
+IUSE="clipboard geoip"
 
 RDEPEND="${PYTHON_DEPS}
+	clipboard? ( dev-python/xerox[${PYTHON_USEDEP}] )
 	geoip? ( dev-python/geoip-python[$PYTHON_USEDEP] )
 "
 
